# fdrive_backend

./: .gitignore  API.txt  CMakeLists.txt  DBStructure.txt  Dockerfile  README.md  buildDocker.sh  concurrencyTest.py  configuration_instructions.md  docker-compose.yml  log.conf  log_test.conf  makeAndRunPythonTests.sh  makeAndRunServer.sh  makeAndRunTests.sh  runAllTestsInDocker.sh  runPythonTests.sh  runPythonTestsInDocker.sh  runServerInDocker.sh  runServerInDockerNotInteractive.sh  runTestsInDocker.sh  runTestsInDockerNotInteractive.sh  start.sh
Documentation/: Makefile  make.bat
Documentation/source/: README  conf.py  documentacion_tecnica.rst  ejemplo.rst  index.rst  intro.rst  intro_al_proyecto.rst  manual_de_administrador.rst  manual_de_proyecto.rst  manual_de_usuario.rst  manual_de_usuario.rst~
EjemploRocksDB/: Makefile  ejemploRocksDB.cpp
ejemplosMongoose/big_upload/: big_upload
ejemplosMongoose/file_upload/: file_upload
functional_tests/: generic.py
functional_tests/file/: changeFileData.py  deleteFile.py  deleteRecover.py  file.py  metadataVersion.py  savingFileMetadataVersion.py  searches.py  sharing.py  uploadDownload.py
functional_tests/folder/: creation.py  renaming.py
functional_tests/user/: file.py  login.py  logout.py  signup.py
src/: .gitignore  CMakeLists.txt  Makefile  Manager.cpp  Manager.h  NonExistentUserException.h  UserException.h  UserToken.cpp  UserToken.h  dbExceptions.h  errorManager.cpp  errorManager.h  fdrive.cpp  file.cpp  file.h  fileExceptions.h  fileManager.cpp  fileManager.h  jsoncpp.cpp  request.h  requestAddUser.cpp  requestAddUser.h  requestExceptions.h  requestHandler.cpp  requestHandler.h  requestLogIn.cpp  requestLogIn.h  restful_api  server.cpp  server.h  user.cpp  user.h  userManager.cpp  userManager.h
src/Ejemplos/: Makefile  printDBContent.h  regexParsing.cpp
src/Ejemplos/JsonParsing/: Makefile  pruebaJsonParser.cpp
src/Ejemplos/RocksDB/: ejemploRocksDB.cpp
src/include/exceptions/: dbExceptions.h  fileExceptions.h  fileSystemExceptions.h  folderExceptions.h  requestExceptions.h  routeExceptions.h  searchExceptions.h  userExceptions.h
src/include/file/: file.h  version.h
src/include/folder/: folder.h
src/include/manager/: Manager.h  fileManager.h  folderManager.h  userManager.h
src/include/searchInformation/: searchInformation.h
src/include/server/: requestHandler.h  routeTree.h  routeTreeNode.h  server.h
src/include/user/: UserToken.h  user.h
src/test/: Test Fdrive.json.postman_collection  test1.cpp  test2.cpp  testFile.cpp  testFolder.cpp  testFolderManager.cpp  testSearch.cpp  testUser.cpp  testUserManager.cpp  testUserManager.h
src/test/testMain/: testMain.cpp
src/testserver/: Makefile  test  testserver.cpp
testConcurrentDB/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
utils/: compileServer.sh  makeAndRunPythonTests.sh  makeAndRunServer.sh  makeAndRunTests.sh  runCoverage.sh
