cmake_minimum_required(VERSION 3.3)
project(fdrive_backend)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/Ejemplos/JsonParsing/pruebaJsonParser.cpp
    src/Ejemplos/RocksDB/ejemploRocksDB.cpp
    src/include/googletest/codegear/gtest_all.cc
    src/include/googletest/codegear/gtest_link.cc
    src/include/googletest/include/gtest/internal/custom/gtest-port.h
    src/include/googletest/include/gtest/internal/custom/gtest-printers.h
    src/include/googletest/include/gtest/internal/custom/gtest.h
    src/include/googletest/include/gtest/internal/gtest-death-test-internal.h
    src/include/googletest/include/gtest/internal/gtest-filepath.h
    src/include/googletest/include/gtest/internal/gtest-internal.h
    src/include/googletest/include/gtest/internal/gtest-linked_ptr.h
    src/include/googletest/include/gtest/internal/gtest-param-util-generated.h
    src/include/googletest/include/gtest/internal/gtest-param-util.h
    src/include/googletest/include/gtest/internal/gtest-port-arch.h
    src/include/googletest/include/gtest/internal/gtest-port.h
    src/include/googletest/include/gtest/internal/gtest-string.h
    src/include/googletest/include/gtest/internal/gtest-tuple.h
    src/include/googletest/include/gtest/internal/gtest-type-util.h
    src/include/googletest/include/gtest/gtest-death-test.h
    src/include/googletest/include/gtest/gtest-message.h
    src/include/googletest/include/gtest/gtest-param-test.h
    src/include/googletest/include/gtest/gtest-printers.h
    src/include/googletest/include/gtest/gtest-spi.h
    src/include/googletest/include/gtest/gtest-test-part.h
    src/include/googletest/include/gtest/gtest-typed-test.h
    src/include/googletest/include/gtest/gtest.h
    src/include/googletest/include/gtest/gtest_pred_impl.h
    src/include/googletest/include/gtest/gtest_prod.h
    src/include/googletest/samples/prime_tables.h
    src/include/googletest/samples/sample1.cc
    src/include/googletest/samples/sample1.h
    src/include/googletest/samples/sample10_unittest.cc
    src/include/googletest/samples/sample1_unittest.cc
    src/include/googletest/samples/sample2.cc
    src/include/googletest/samples/sample2.h
    src/include/googletest/samples/sample2_unittest.cc
    src/include/googletest/samples/sample3-inl.h
    src/include/googletest/samples/sample3_unittest.cc
    src/include/googletest/samples/sample4.cc
    src/include/googletest/samples/sample4.h
    src/include/googletest/samples/sample4_unittest.cc
    src/include/googletest/samples/sample5_unittest.cc
    src/include/googletest/samples/sample6_unittest.cc
    src/include/googletest/samples/sample7_unittest.cc
    src/include/googletest/samples/sample8_unittest.cc
    src/include/googletest/samples/sample9_unittest.cc
    src/include/googletest/src/gtest-all.cc
    src/include/googletest/src/gtest-death-test.cc
    src/include/googletest/src/gtest-filepath.cc
    src/include/googletest/src/gtest-internal-inl.h
    src/include/googletest/src/gtest-port.cc
    src/include/googletest/src/gtest-printers.cc
    src/include/googletest/src/gtest-test-part.cc
    src/include/googletest/src/gtest-typed-test.cc
    src/include/googletest/src/gtest.cc
    src/include/googletest/src/gtest_main.cc
    src/include/googletest/test/gtest-death-test_ex_test.cc
    src/include/googletest/test/gtest-death-test_test.cc
    src/include/googletest/test/gtest-filepath_test.cc
    src/include/googletest/test/gtest-linked_ptr_test.cc
    src/include/googletest/test/gtest-listener_test.cc
    src/include/googletest/test/gtest-message_test.cc
    src/include/googletest/test/gtest-options_test.cc
    src/include/googletest/test/gtest-param-test2_test.cc
    src/include/googletest/test/gtest-param-test_test.cc
    src/include/googletest/test/gtest-param-test_test.h
    src/include/googletest/test/gtest-port_test.cc
    src/include/googletest/test/gtest-printers_test.cc
    src/include/googletest/test/gtest-test-part_test.cc
    src/include/googletest/test/gtest-tuple_test.cc
    src/include/googletest/test/gtest-typed-test2_test.cc
    src/include/googletest/test/gtest-typed-test_test.cc
    src/include/googletest/test/gtest-typed-test_test.h
    src/include/googletest/test/gtest-unittest-api_test.cc
    src/include/googletest/test/gtest_all_test.cc
    src/include/googletest/test/gtest_break_on_failure_unittest_.cc
    src/include/googletest/test/gtest_catch_exceptions_test_.cc
    src/include/googletest/test/gtest_color_test_.cc
    src/include/googletest/test/gtest_env_var_test_.cc
    src/include/googletest/test/gtest_environment_test.cc
    src/include/googletest/test/gtest_filter_unittest_.cc
    src/include/googletest/test/gtest_help_test_.cc
    src/include/googletest/test/gtest_list_tests_unittest_.cc
    src/include/googletest/test/gtest_main_unittest.cc
    src/include/googletest/test/gtest_no_test_unittest.cc
    src/include/googletest/test/gtest_output_test_.cc
    src/include/googletest/test/gtest_pred_impl_unittest.cc
    src/include/googletest/test/gtest_premature_exit_test.cc
    src/include/googletest/test/gtest_prod_test.cc
    src/include/googletest/test/gtest_repeat_test.cc
    src/include/googletest/test/gtest_shuffle_test_.cc
    src/include/googletest/test/gtest_sole_header_test.cc
    src/include/googletest/test/gtest_stress_test.cc
    src/include/googletest/test/gtest_throw_on_failure_ex_test.cc
    src/include/googletest/test/gtest_throw_on_failure_test_.cc
    src/include/googletest/test/gtest_uninitialized_test_.cc
    src/include/googletest/test/gtest_unittest.cc
    src/include/googletest/test/gtest_xml_outfile1_test_.cc
    src/include/googletest/test/gtest_xml_outfile2_test_.cc
    src/include/googletest/test/gtest_xml_output_unittest_.cc
    src/include/googletest/test/production.cc
    src/include/googletest/test/production.h
    src/include/googletest/xcode/Samples/FrameworkSample/widget.cc
    src/include/googletest/xcode/Samples/FrameworkSample/widget.h
    src/include/googletest/xcode/Samples/FrameworkSample/widget_test.cc
    src/include/json/json-forwards.h
    src/include/json/json.h
    src/include/rocksdb/utilities/backupable_db.h
    src/include/rocksdb/utilities/checkpoint.h
    src/include/rocksdb/utilities/convenience.h
    src/include/rocksdb/utilities/db_ttl.h
    src/include/rocksdb/utilities/document_db.h
    src/include/rocksdb/utilities/flashcache.h
    src/include/rocksdb/utilities/geo_db.h
    src/include/rocksdb/utilities/info_log_finder.h
    src/include/rocksdb/utilities/json_document.h
    src/include/rocksdb/utilities/leveldb_options.h
    src/include/rocksdb/utilities/optimistic_transaction_db.h
    src/include/rocksdb/utilities/spatial_db.h
    src/include/rocksdb/utilities/stackable_db.h
    src/include/rocksdb/utilities/table_properties_collectors.h
    src/include/rocksdb/utilities/transaction.h
    src/include/rocksdb/utilities/transaction_db.h
    src/include/rocksdb/utilities/utility_db.h
    src/include/rocksdb/utilities/write_batch_with_index.h
    src/include/rocksdb/c.h
    src/include/rocksdb/cache.h
    src/include/rocksdb/compaction_filter.h
    src/include/rocksdb/compaction_job_stats.h
    src/include/rocksdb/comparator.h
    src/include/rocksdb/convenience.h
    src/include/rocksdb/db.h
    src/include/rocksdb/delete_scheduler.h
    src/include/rocksdb/env.h
    src/include/rocksdb/experimental.h
    src/include/rocksdb/filter_policy.h
    src/include/rocksdb/flush_block_policy.h
    src/include/rocksdb/immutable_options.h
    src/include/rocksdb/iostats_context.h
    src/include/rocksdb/iterator.h
    src/include/rocksdb/ldb_tool.h
    src/include/rocksdb/listener.h
    src/include/rocksdb/memtablerep.h
    src/include/rocksdb/merge_operator.h
    src/include/rocksdb/metadata.h
    src/include/rocksdb/options.h
    src/include/rocksdb/perf_context.h
    src/include/rocksdb/perf_level.h
    src/include/rocksdb/rate_limiter.h
    src/include/rocksdb/slice.h
    src/include/rocksdb/slice_transform.h
    src/include/rocksdb/snapshot.h
    src/include/rocksdb/sst_dump_tool.h
    src/include/rocksdb/statistics.h
    src/include/rocksdb/status.h
    src/include/rocksdb/table.h
    src/include/rocksdb/table_properties.h
    src/include/rocksdb/thread_status.h
    src/include/rocksdb/transaction_log.h
    src/include/rocksdb/types.h
    src/include/rocksdb/universal_compaction.h
    src/include/rocksdb/version.h
    src/include/rocksdb/write_batch.h
    src/include/rocksdb/write_batch_base.h
    src/test/testMain/testMain.cpp
    src/test/testUser.cpp
    src/dbExceptions.h
    src/fdrive.cpp
    src/file.cpp
    src/file.h
    src/fileExceptions.h
    src/fileManager.cpp
    src/fileManager.h
    src/jsoncpp.cpp
    src/Manager.cpp
    src/Manager.h
    src/mongoose.c
    src/mongoose.h
    src/requestExceptions.h
    src/requestHandler.cpp
    src/requestHandler.h
    src/server.cpp
    src/server.h
    src/user.cpp
    src/user.h
    src/UserException.h
    src/userManager.cpp
    src/userManager.h
    src/UserToken.cpp
    src/UserToken.h
    API.txt
    configuration_instructions.md
    DBStructure.txt src/include/exceptions/folderExceptions.h)

add_executable(fdrive_backend ${SOURCE_FILES})